src/test/resources/syntax/invalid/group_definition_flag_default_group.unpick
unpick v3
group int
    @flags